HTML5 validation improvements

--- a/sitetech/prepended.html
+++ b/sitetech/prepended.html
@@ -92,7 +92,7 @@
 						<form action="/search/" method="get">
 						<input id="header-search" type="text" name="query" value="" placeholder="Search <?php echo $projectlight->getShortName (); ?> website" />
 						
-						<input type="image" class="campl-search-submit " src="/images/interface/btn-search-header.png"/>
+						<input type="image" class="campl-search-submit" src="/images/interface/btn-search-header.png" alt="Search" />
 						</form>
 					</div>
 				</div>
@@ -101,10 +101,10 @@
 	</div>
 	<div class="campl-row campl-global-header campl-search-drawer">
 		<div class="campl-wrap clearfix">
-			<form class="campl-site-search-form" id="site-search-container" action="">
+			<form class="campl-site-search-form" id="site-search-container">
 				<div class="campl-search-form-wrapper clearfix">
-					<input type="text" class="text" placeholder="Search"/>
-					<input type="image" class="campl-search-submit" src="/images/interface/btn-search.png" />
+					<input type="text" class="text" placeholder="Search" />
+					<input type="image" class="campl-search-submit" src="/images/interface/btn-search.png" alt="Search" />
 				</div>
 			</form>
 		</div>
