Add support for carousel file in front page block

--- a/sitetech/prepended.html
+++ b/sitetech/prepended.html
@@ -346,6 +346,12 @@
 	
 	</div>
 	
+	<?php $projectlight->carouselFile (); ?>
+	
+		<div class="campl-row campl-content campl-recessed-content">
+			<div class="campl-wrap clearfix">
+			
+			
 <?php } else {		/* i.e. !$isHomePage */ ?>
 
 		<div class="campl-wrap clearfix campl-page-sub-title campl-recessed-sub-title">
@@ -411,6 +417,7 @@
 				<div class="campl-content-container">
 		
 <?php } // End of $isHomePage check ?>
+				
 				
 				<?php echo $projectlight->dataSidebar (); ?>
 				<?php $projectlight->sectionmenu (); ?>
