--- a/sitetech/appended.html
+++ b/sitetech/appended.html
@@ -33,6 +33,7 @@
 					<h3><!-- {$footer-header-2} --><a href="#">Colophon</a><!-- /{$footer-header-2} --></h3> 
 					<!-- {$footer-list-2} --><ul class="campl-unstyled-list">
 						<li><a href="/about/website/">About this site</a></li>
+						<li><a href="https://www.cam.ac.uk/about-this-site/privacy-policy">Site privacy &amp; cookie policies</a></li>
 						<li><a href="/about/website/sitemap/">Sitemap</a></li>
 					</ul>
 				
@@ -173,8 +174,6 @@
 	<?php echo $projectlight->jQueryNoconflict (); ?>
 	<script src="/javascripts/libs/modernizr.js"></script>
   	<script src="/javascripts/custom.js"></script>
-
-	<?php echo $projectlight->googleAnalytics (); ?>
 	
 </body>
 </html>
