--- a/sitetech/prepended.html
+++ b/sitetech/prepended.html
@@ -39,6 +39,8 @@
 	<?php $projectlight->headFile (); ?>
 	<?php echo $projectlight->googleSiteVerification (); ?>
 	
+	<?php echo $projectlight->googleAnalytics (); ?>
+	
 </head>
 
 <body<?php echo $projectlight->bodyAttributes (); ?><?php $projectlight->bodyTagFile (); ?>>
