--- a/sitetech/prepended.html
+++ b/sitetech/prepended.html
@@ -218,7 +218,7 @@
 								<a href="https://www.cam.ac.uk/about-this-site/social-media/connect-with-us">Video and audio</a>
 							</li>
 							<li>
-								<a href="https://www.communications.cam.ac.uk/media/find-expert">Find an expert</a>
+								<a href="https://www.communications.cam.ac.uk/find-expert">Find an expert</a>
 							</li>
 							<li>
 								<a href="https://www.cam.ac.uk/about-the-university">Publications</a>
