Mark up nav/main block to assist screenreaders

--- a/sitetech/appended.html
+++ b/sitetech/appended.html
@@ -4,6 +4,10 @@
 	<?php $projectlight->footermenu (); ?>
 	
 	
+			</main><!-- / Useful for screen reader users, e.g. JAWS click Q then Insert-Down -->
+			<!-- End of content -->
+			
+
 			<?php if (!$projectlight->isHomePage ()) {	//For the home page, remove the left3+right9 column structure ?>
 				</div>
 			</div>
