Load pureContent library dependency explicitly rather than relying on include_path

--- a/sitetech/prepended.html
+++ b/sitetech/prepended.html
@@ -1,6 +1,6 @@
 <?php
 	# Load the integration; will load the config at sitetech/.config.php
-	require_once ('projectlight-purecontent/projectlightPurecontent.php');
+	require_once (__DIR__ . '/../projectlightPurecontent.php');
 	$projectlight = new projectlight ();
 ?>
 <!DOCTYPE html>
