Add ignore-changes comment markers

--- a/sitetech/appended.html
+++ b/sitetech/appended.html
@@ -6,6 +6,7 @@
 	
 			</main><!-- / Useful for screen reader users, e.g. JAWS click Q then Insert-Down -->
 			<!-- End of content -->
+			<!-- ignore-changes -->
 			
 
 			<?php if (!$projectlight->isHomePage ()) {	//For the home page, remove the left3+right9 column structure ?>
@@ -180,4 +181,5 @@
   	<script src="/javascripts/custom.js"></script>
 	
 </body>
+<!-- /ignore-changes -->
 </html>
