Global navigation link updates

--- a/sitetech/prepended.html
+++ b/sitetech/prepended.html
@@ -32,9 +32,9 @@
 	
 	<script src="//use.typekit.com/hyb5bko.js"></script>
 	<script>try {Typekit.load();}catch(e){}</script>
-	<script>  document.documentElement.className += " js";</script>
+	<script>document.documentElement.className += " js";</script>
 	
-	<link rel="stylesheet" href="/sitetech/global.css?220210" />
+	<link rel="stylesheet" href="/sitetech/global.css?240617" />
 	<link rel="stylesheet" href="/sitetech/generic.css?220210" />
 	
 	<?php $projectlight->headFile (); ?>
@@ -135,7 +135,7 @@
 										<a href="https://www.undergraduate.study.cam.ac.uk/courses">Courses</a>
 									</li>
 									<li>
-										<a href="https://www.undergraduate.study.cam.ac.uk/applying">Applying</a>
+										<a href="https://www.undergraduate.study.cam.ac.uk/apply">Applying</a>
 									</li>
 									<li>
 										<a href="https://www.undergraduate.study.cam.ac.uk/events">Events and open days</a>
@@ -216,10 +216,7 @@
 								<a href="https://www.communications.cam.ac.uk/">For media</a>
 							</li>
 							<li>
-								<a href="https://www.cam.ac.uk/about-this-site/social-media/connect-with-us">Video and audio</a>
-							</li>
-							<li>
-								<a href="https://www.communications.cam.ac.uk/find-expert">Find an expert</a>
+								<a href="https://www.cam.ac.uk/about-this-site/connect-with-us">Video and audio</a>
 							</li>
 							<li>
 								<a href="https://www.cam.ac.uk/about-the-university">Publications</a>
@@ -280,7 +277,7 @@
 					<a href="https://www.museums.cam.ac.uk/">Museums &amp; collections</a>
 				</li>
 				<li class="last">
-					<a href="https://www.cam.ac.uk/email-and-phone-search">Email &amp; phone search</a>
+					<a href="https://www.cam.ac.uk/about-the-university/contact-the-university#lookup">Email &amp; phone search</a>
 				</li>
 			</ul>
 		</div>
