--- a/sitetech/prepended.html
+++ b/sitetech/prepended.html
@@ -172,7 +172,7 @@
 								<a href="https://www.internationalstudents.cam.ac.uk/">International students</a>
 							</li>
 							<li>
-								<a href="https://www.ice.cam.ac.uk">Continuing education</a>
+								<a href="https://www.pace.cam.ac.uk/">Continuing education</a>
 							</li>
 							<li>
 								<a href="https://www.epe.admin.cam.ac.uk/">Executive and professional education</a>
@@ -235,7 +235,7 @@
 								<a href="https://www.cam.ac.uk/public-engagement">Public engagement</a>
 							</li>
 							<li>
-								<a href="https://www.jobs.cam.ac.uk">Jobs</a>
+								<a href="https://www.cam.ac.uk/jobs">Jobs</a>
 							</li>
 							<li class="last">
 								<a href="https://www.philanthropy.cam.ac.uk/">Giving to Cambridge</a>
