Replace Typekit JS loading with standard CSS

--- a/sitetech/prepended.html
+++ b/sitetech/prepended.html
@@ -26,8 +26,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
 	<link rel="stylesheet" href="/sitetech/full-stylesheet-changes.css" />
 	
-	<script src="//use.typekit.com/hyb5bko.js"></script>
-	<script>try {Typekit.load();}catch(e){}</script>
+	<!-- Licensed fonts -->
+	<link rel="stylesheet" href="https://use.typekit.net/hyb5bko.css">
 	
 	<script>document.documentElement.className += " js";</script>
 	
