Header/footer link updates

--- a/sitetech/appended.html
+++ b/sitetech/appended.html
@@ -110,7 +110,7 @@
 								<a href="https://www.internationalstudents.cam.ac.uk/">International students</a>
 							</li>
 							<li>
-								<a href="https://www.ice.cam.ac.uk">Continuing education</a>
+								<a href="https://www.pace.cam.ac.uk/">Continuing education</a>
 							</li>
 							<li>
 								<a href="https://www.epe.admin.cam.ac.uk/">Executive and professional education</a>
@@ -142,7 +142,7 @@
 							<a href="https://www.admin.cam.ac.uk/whatson/">Events</a>
 						</li>
 						<li>
-							<a href="https://www.jobs.cam.ac.uk">Jobs</a>
+							<a href="https://www.cam.ac.uk/jobs">Jobs</a>
 						</li>
 						<li>
 							<a href="https://www.philanthropy.cam.ac.uk">Giving to Cambridge</a>
