--- a/sitetech/prepended.html
+++ b/sitetech/prepended.html
@@ -161,7 +161,7 @@
 									<li>
 									<a href="https://www.postgraduate.study.cam.ac.uk/application-process/how-do-i-apply">How to apply</a></li>
 									<li><a href="https://www.cambridgestudents.cam.ac.uk/fees-and-funding">Fees and funding</a></li>
-									<li><a href="https://www.postgraduate.study.cam.ac.uk/find-out-more/applicant-frequently-asked-questions">Frequently asked questions</a></li>
+									<li><a href="https://www.postgraduate.study.cam.ac.uk/contact-us">Frequently asked questions</a></li>
 								</ul>
 							</li>
 						</ul>
