Header/footer link updates

--- a/sitetech/appended.html
+++ b/sitetech/appended.html
@@ -158,7 +158,7 @@
 							<a href="https://www.cam.ac.uk/research/news">News</a>
 						</li>
 						<li>
-							<a href="https://www.cam.ac.uk/research/spotlights-on">Spotlight on...</a>
+							<a href="https://www.cam.ac.uk/news#:~:text=Spotlight%20on...">Spotlight on...</a>
 						</li>
 						<li>
 							<a href="https://www.cam.ac.uk/research/research-at-cambridge">About research at Cambridge</a>
