--- a/sitetech/prepended.html
+++ b/sitetech/prepended.html
@@ -159,7 +159,7 @@
 										<a href="https://www.postgraduate.study.cam.ac.uk/courses">Qualifications directory</a>
 									</li>
 									<li>
-									<a href="https://www.postgraduate.study.cam.ac.uk/application-process/how-do-i-apply">How to apply</a></li>
+										<a href="https://www.postgraduate.study.cam.ac.uk/apply">How to apply</a></li>
 									<li><a href="https://www.cambridgestudents.cam.ac.uk/fees-and-funding">Fees and funding</a></li>
 									<li><a href="https://www.postgraduate.study.cam.ac.uk/contact-us">Frequently asked questions</a></li>
 								</ul>
@@ -175,7 +175,7 @@
 								<a href="https://www.pace.cam.ac.uk/">Continuing education</a>
 							</li>
 							<li>
-								<a href="https://www.epe.admin.cam.ac.uk/">Executive and professional education</a>
+								<a href="https://www.cam.ac.uk/study-at-cambridge/executive-and-professional-education">Executive and professional education</a>
 							</li>
 							<li>
 								<a href="https://www.educ.cam.ac.uk">Courses in education</a>
