Header/footer link updates

--- a/sitetech/appended.html
+++ b/sitetech/appended.html
@@ -113,7 +113,7 @@
 								<a href="https://www.pace.cam.ac.uk/">Continuing education</a>
 							</li>
 							<li>
-								<a href="https://www.epe.admin.cam.ac.uk/">Executive and professional education</a>
+								<a href="https://www.executiveprofessional.cam.ac.uk/">Executive and professional education</a>
 							</li>
 							<li>
 								<a href="https://www.educ.cam.ac.uk">Courses in education</a>
