--- a/sitetech/prepended.html
+++ b/sitetech/prepended.html
@@ -175,7 +175,7 @@
 								<a href="https://www.pace.cam.ac.uk/">Continuing education</a>
 							</li>
 							<li>
-								<a href="https://www.cam.ac.uk/study-at-cambridge/executive-and-professional-education">Executive and professional education</a>
+								<a href="https://www.executiveprofessional.cam.ac.uk/">Executive and professional education</a>
 							</li>
 							<li>
 								<a href="https://www.educ.cam.ac.uk">Courses in education</a>
